--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -107,13 +107,6 @@ header ul {
 
   padding:0;
 
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
 
   border-radius:5px;
   border:1px solid #d2d2d2;
@@ -123,15 +116,14 @@ header ul {
 
 header li {
   width:89px;
-  float:left;
   border-right:1px solid #d2d2d2;
   height:40px;
 }
 
 header ul a {
   line-height:1;
-  font-size:11px;
-  color:#999;
+  font-size:20px;
+  color:#39c;
   display:block;
   text-align:center;
   padding-top:6px;
