--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -104,20 +104,13 @@ header {
 header ul {
   list-style:none;
   height:40px;
-
   padding:0;
-
-
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
   width:270px;
 }
 
 header li {
-  width:89px;
+  float:left;
   border-right:1px solid #d2d2d2;
-  height:40px;
 }
 
 header ul a {
@@ -127,7 +120,6 @@ header ul a {
   display:block;
   text-align:center;
   padding-top:6px;
-  height:40px;
 }
 
 strong {
