--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -109,8 +109,8 @@ header ul {
 }
 
 header li {
-  float:left;
-  border-right:1px solid #d2d2d2;
+  /*float:left;
+  border-right:1px solid #d2d2d2;*/
 }
 
 header ul a {
