--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -129,7 +129,7 @@ strong {
 
 header ul li + li {
   width:88px;
-  border-left:1px solid #fff;
+  /*border-left:1px solid #fff;*/
 }
 
 header ul li + li + li {
